fix: missing background color

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -159,6 +159,7 @@ h4 {font-size: 1.3rem;}
 
 .body {
     padding: 1rem;
+    background-color: var(--color-background);
 
     flex: 1 0 auto;
 
